# enzsrp

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: DEVELOPMENT.md
enzsrp/domain/entity/: amino_acid.py  evidence_and_clusion_ontology.py  reaction_direciton.py
enzsrp/extension/: mol_ext.py  parse_reaction.py  rxn_ext.py
enzsrp/presentation/: build_enzyme_reaction_dataset.py  check_data_identity.py  check_evidence_rate.py  download_isoform_id_uniparc_mapping.py  draw_reactions.py  print_data_build_logs.py
enzsrp/utils/: list_utils.py
rxndata2/extension/: draw_reactions_as_pdf.py  list_ext.py  rdkit_warning.py  rxn_ext.py
rxndata2/presentation/: build_enzyme_reaction_dataset.py  check_data_identity.py  check_evidence_rate.py  download_isoform_id_uniparc_mapping.py  draw_reactions.py  print_data_build_logs.py
rxndata2/utils/: env_var_names.py  hash_util.py
tests/data/: 10001.rxn  71500.rxn  README.md  credits.md  uniprotkb_A0A0E3KBH3_OR_A0A072ULZ1_OR_A_2024_09_24.json  uniprotkb_accession_A1L3X0_OR_accession_2024_07_27.json  uniprotkb_accession_F1MAB7_OR_O14975_2024_09_21.json
tests/data/output/: idmapping_2024_09_21_isoform_uniparc.json
tests/data/single_entry/: A4Q9F3.json  O00115.json  P0DKX7.json
tests/integration/: check_output_file_content.py  test_construct_enzyme_reaction_dataset.py  test_rhea.py
tests/test_utils/: curate_test_data.py  hash.py  test_default_path.py  test_hash.py
tests/unit/extension/: test_manual_rdkit_warning_interceptor.py  test_rdkit_warning_interceptor.py
(+23 files in other folders)
