[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enzsrp"
version = "1.0.0.dev0"
description = "A Python package"
authors = [{ name = "Tomoya Okuno", email = "motonuko.contact@gmail.com" }]

[tool.setuptools.packages]
find = { include = ["enzsrp"], exclude = ["*.tests", "*.tests.*", "tests.*", "tests"] }
